DWARF emitted by Clang cannot be parsed

XMLWordPrintable

    • b25

      Using a clean debug build with clang (14.0.6) toolchain, `make CONF=debug test TEST="gtest:os_linux.decoder_get_source_info_valid_vm"` fails with

      ```
      assert(false) failed: No address descriptor found containing offset_in_library.
      ...
      # Problematic frame:
      # V [libjvm.so+0xdc496f] DwarfFile::DebugAranges::find_compilation_unit_offset(unsigned int, unsigned int*)+0x16f
      ```

      gcc (11.2.0) toolchain works fine.


      This can also be observed in VM crashes:
      $ java -XX:CICrashAt=1 --version

            Assignee:
            Christian Hagedorn
            Reporter:
            Albert Yang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: