8293422: DWARF emitted by Clang cannot be parsed