src/hotspot/share/utilities/decoder_elf.cpp
@@ -55,6 +55,10 @@ bool ElfDecoder::decode(address addr, char *buf, int buflen, int* offset, const 
 }
 
 bool ElfDecoder::get_source_info(address pc, char* filename, size_t filename_len, int* line, bool is_pc_after_call) {
+#ifdef __clang__
+  DWARF_LOG_ERROR("Parsing DWARF emitted by Clang is currently not supported due to an incomplete .debug_aranges section.");
+  return false;
+#else
   assert(filename != nullptr && filename_len > 0 && line != nullptr, "Argument error");
   filename[0] = '\0';
   *line = -1;
@@ -90,6 +94,7 @@ bool ElfDecoder::get_source_info(address pc, char* filename, size_t filename_len
                        p2i(pc), offset_in_library, filename, *line);
   DWARF_LOG_INFO("") // To structure the debug output better.
   return true;
+#endif // clang
 }
 
 
