test/hotspot/gtest/runtime/test_os_linux.cpp
@@ -434,7 +434,7 @@ TEST(os_linux, addr_to_function_valid) {
   ASSERT_TRUE(offset >= 0);
 }
 
-#ifndef PRODUCT
+#ifndef __clang__ // Parsing DWARF emitted by Clang is currently unsupported
 // Test valid address of method JNI_CreateJavaVM in jni.cpp. We should get "jni.cpp" in the buffer and a valid line number.
 TEST_VM(os_linux, decoder_get_source_info_valid) {
   char buf[128] = "";
@@ -475,5 +475,5 @@ TEST_VM(os_linux, decoder_get_source_info_invalid) {
     ASSERT_TRUE(line == -1);
   }
 }
-#endif // NOT PRODUCT
+#endif // NOT clang
 #endif // LINUX
